--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -100,6 +100,7 @@
 \vert           &\kws{shl}         \vert \kws{shl-u}       \vert \kws{shl-s}                                                   &\text{Unsigned/Signed Shift Left}\\
 \vert           &\kws{shr}         \vert \kws{shr-u}       \vert \kws{shr-s}                                                   &\text{Unsigned/Signed Shift Right}\\
 \vert           &\kws{convert}     \vert \kws{convert-u}   \vert \kws{convert-s}                                               &\text{Unsigned to Signed Conversion}\\
+\vert           &\kws{not}                                                                                                     &\text{Unsigned Not}\\
 \vert           &\kws{and}                                                                                                     &\text{Unsigned And}\\
 \vert           &\kws{or}                                                                                                      &\text{Unsigned Or}\\
 \vert           &\kws{xor}                                                                                                     &\text{Unsigned Xor}\\
