Fixed performance bug in expand-when where equality between the consequence and alternate were always assumed different, causing a huge blow-up in logic

--- a/TODO
+++ b/TODO
@@ -27,6 +27,7 @@ Well-formed high firrtl
    UInt only has positive ints
    No combinational loops
    cannot connect to a pad, or a register. only connct to a reference
+   expression in pad must be a ground type
 After adding dynamic assertions, insert bounds check with accessor expansion
 Well-formed low firrtl
    All things only assigned to once
