--- a/TODO
+++ b/TODO
@@ -25,6 +25,7 @@ Well-formed high firrtl
    No combinational loops
    cannot connect to a pad, or a register. only connct to a reference
    onreset can only handle a register
+   all references are declared
 After adding dynamic assertions, insert bounds check with accessor expansion
 Well-formed low firrtl
    All things only assigned to once
